# advent-of-code-2022

./: Cargo.toml  README.md
src/: 21-1.rs  air_set_11_40_47_077745000.txt  air_set_11_41_02_753332000.txt  air_set_11_41_59_120129000.txt  air_set_11_44_34_186517000.txt  air_set_11_44_40_632030000.txt  air_set_11_44_43_021548000.txt  air_set_11_44_47_856702000.txt  air_set_11_44_48_322458000.txt  air_set_11_44_48_348365000.txt  air_set_11_44_51_117859000.txt  air_set_11_44_51_582683000.txt  air_set_11_44_51_617328000.txt  air_set_11_48_00_627531000.txt  algo.md  answer.md  find_where_not_deterministic.txt  i_got_it.txt  input18_test2.txt  input20_gpt.txt  input22_three.txt  main.rs  main.ts  output.txt  solution_tree.txt  tetris_tower_06_58_44.txt  tetris_tower_07_06_11.txt  tetris_tower_07_09_28.txt  tetris_tower_07_09_58.txt  tetris_tower_08_03_25.txt  tetris_tower_08_13_09_852474000.txt  tetris_tower_08_13_09_868318000.txt  tetris_tower_08_13_09_891590000.txt  tetris_tower_08_13_09_975172000.txt  tetris_tower_08_13_10_032623000.txt  tetris_tower_08_52_26_764843000.txt  tetris_tower_08_53_17_018882000.txt  tetris_tower_08_59_54_251697000.txt  tetris_tower_09_02_46_350899000.txt
src/01/: 1-1.rs  1-2.rs
src/02/: 2-1.rs
src/03/: 3-1.rs  3-2.rs
src/04/: 4-1.rs  4-2.rs
src/05/: 5-1.rs  5-2.rs
src/06/: 6-1.rs  6-2.rs
src/07/: 7-1.rs  7-2.rs
src/08/: 8-1.rs  8-2.rs
src/09/: 9-1.rs  9-2.rs
src/10/: 10-1.rs  10-2.rs
src/11/: 11-1.rs  11-2.rs
src/12/: 12-1.rs  12-2.rs  output.txt
src/13/: 13-1.rs  13-2.rs
src/14/: 14-1.rs  14-2.rs
src/15/: 15-1.rs  (+3 more)
(+32 files in other folders)
