[package]
name = "your-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
chrono = "0.4.26"
queues = "1.0.2"
lazy_static = "1.4.0"
rand = "0.8.4"
